--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -12,7 +12,9 @@
 </div>
 
 <div class="messages">
+  <%= render partial: 'message', collection: @messages %>
 </div>
+
 
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
   <div class="form-input">
